Implemented Pagination and fetched crypto data from remote api

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,16 @@
 pluginManagement {
-    repositories {
-        google()
-        mavenCentral()
-        gradlePluginPortal()
+    buildscript {
+        repositories {
+            google()
+            mavenCentral()
+            maven {
+                url = uri("https://storage.googleapis.com/r8-releases/raw")
+            }
+            gradlePluginPortal()
+        }
+        dependencies {
+            classpath("com.android.tools:r8:8.2.24")
+        }
     }
 }
 dependencyResolutionManagement {
